@@ -1,3 +1,10 @@
+2016-04-07 0.7.1 beta
+MIDI mapper: first steps.
+
+2016-04-06 0.7.0 beta
+Further works on project integration.
+Perhaps we need a version bump?
+
 2016-04-06 0.7.0 beta
 Merge qmidiplayerlite. Hope this won't break the repo.
 
